[package]
name = "suite"
version = "0.1.0"
authors = ["Alexander Slesarev <alex.slesarev@gmail.com>"]
edition = "2018"
default-run = "main"

[[bin]]
name = "versions"
path = "src/versions.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
chrono = "0.4.19"
regex = "1.5.4"
itertools = "0.10.1"
clap = "2.33.3"
serde_json = "1.0.68"
plotters = "0.3.1"
