[package]
name = "suite"
version = "0.1.0"
authors = ["Alexander Slesarev <alex.slesarev@gmail.com>"]
edition = "2021"
default-run = "main"

[[bin]]
name = "versions"
path = "src/versions.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
regex = "1"
itertools = "0.14"
clap = { version = "4", features = ["cargo"] }
plotters = "0.3"
