[package]
edition = "2021"
name = "hyper-monoio-test"
version = "0.2.1"
authors = ["Alexander Slesarev <alex.slesarev@gmail.com>"]

[dependencies]
futures = "0.3"
getopts = "0.2"
hyper = {version = "1", features = ["http1", "client", "server"]}
lazy_static = "1"
monoio = "0.2"
monoio-compat = { version = "0.2", features = ["hyper"] }
regex = "1"
tokio = {version = "1", default-features = false, features = ["io-util"]}
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
