[package]
name = "hyper-tokio-test"
version = "0.1.0"
authors = ["Alexander Slesarev <alex.slesarev@gmail.com>"]
edition = "2021"

[dependencies]
getopts = "0.2.21"
hyper = { version = "0.14.24", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.7.1"
tokio = { version = "1.25.0", features = ["full"] }
