[package]
name = "hyper-tokio-test"
version = "0.2.1"
authors = ["Alexander Slesarev <alex.slesarev@gmail.com>"]
edition = "2024"

[dependencies]
getopts = "0.2"
hyper = { version = "1", features = ["full"] }
lazy_static = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
