[package]
name = "simple-web-server"
version = "0.0.2"
authors = ["Alexander Slesarev <alex.slesarev@gmail.com>"]
edition = "2018"

[dependencies]
getopts = "0.2.21"
hyper = { version = "0.14.13", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.5.4"
tokio = { version = "1.12.0", features = ["full"] }
