[package]
name = "simple-web-server"
version = "0.0.2"
authors = ["Alexander Slesarev <alex.slesarev@gmail.com>"]
edition = "2021"

[dependencies]
getopts = "0.2.21"
hyper = { version = "0.14.19", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.5.6"
tokio = { version = "1.18.2", features = ["full"] }
